Changed button color when simulation running.

--- a/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.scss
@@ -42,6 +42,10 @@ table {
             &:hover {
                 background-color: #4870b0a0;
             }
+
+            &.red {
+                background-color: red;
+            }
         }
     }
 
