Added showing of device type and restricted simulation to only 1, 2 and 4.

--- a/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.scss
@@ -109,3 +109,12 @@ table {
         }
     }
 }
+
+#message {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: large;
+}
