--- a/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.html
+++ b/frontend/projects/iot-registry-frontend/src/app/simulation/simulation.html
@@ -1,4 +1,5 @@
 <div class="table-container">
+      <div id="message">Status: {{ message }}</div>
     <div id="buttons">
         <button id="stopAllSimulations" (click)="onStopAllSimulationsClick()">Stop all simulations</button>
     </div>
@@ -6,6 +7,7 @@
         <thead>
             <tr>
                 <th>Serial number</th>
+                <th>Type</th>
                 <th>Simulation control</th>
             </tr>
         </thead>
@@ -13,6 +15,7 @@
             @for (device of devices; track device) {
             <tr [ngClass]="getStatusClass(device.status)">
                 <td>{{ device.serialNumber }}</td>
+                <td>{{ device.type }}</td>
                 <td>
                     <button [ngClass]="{ 'red': device.simulating }" (click)="toggleSimulation(device)">
                         {{ device.simulating ? 'STOP' : 'START' }}
